--- a/application/admin/view/index.html
+++ b/application/admin/view/index.html
@@ -149,7 +149,7 @@
                         <p>系统环境：{{PHP_OS}}+PHP{{$system.php_version}}+MySQL{{$system.mysql_version}}</p>
                         <p>使用技术：PHP+MySQL+Bootstrap+JQuery</p>
                         <p>系统开发：<a target="_blank" href="http://www.gouguoyin.cn/about.html">勾国印</a></p>
-                        <p>帮助中心：<a target="_blank" href="https://github.com/gouguoyin/apidoc/blob/master/README.md">help.gouguoyin.cn</a></p>
+                        <p>演示网站：<a target="_blank" href="http://phprap.gouguoyin.cn">apidoc.gouguoyin.cn</a></p>
                         <p>官方网站：<a target="_blank" href="http://phprap.gouguoyin.cn/">phprap.gouguoyin.cn</a></p>
                         <p>官方QQ群：<a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=cf9440f673d6a29150bb8f033ed5fdf0e4e685f92350b7006778660bf8580f57"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="GoPHP官方交流群" title="GoPHP官方交流群"></a></p>
                     </div>
