修复安装出错的BUG

--- a/application/admin/view/index.html
+++ b/application/admin/view/index.html
@@ -147,7 +147,7 @@
                     <div class="panel-body">
                         <p>程序版本：V{{$system.gophp_version}} [<a href="https://github.com/gouguoyin/phprap" target="_blank">查看最新版本</a>]</p>
                         <p>系统环境：{{PHP_OS}}+PHP{{$system.php_version}}+MySQL{{$system.mysql_version}}</p>
-                        <p>使用技术：PHP+MySQL+Bootstrap+JQuery</p>
+                        <p>使用技术：PHP+MySQL+Bootstrap+JQuery+Mock.js</p>
                         <p>系统开发：<a target="_blank" href="http://www.gouguoyin.cn/about.html">勾国印</a></p>
                         <p>演示网站：<a target="_blank" href="http://phprap.gouguoyin.cn">apidoc.gouguoyin.cn</a></p>
                         <p>官方网站：<a target="_blank" href="http://phprap.gouguoyin.cn/">phprap.gouguoyin.cn</a></p>
