--- a/application/install/view/step2.html
+++ b/application/install/view/step2.html
@@ -34,42 +34,42 @@
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">数据库服务器</label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" name="step2[host]" class="form-control" placeholder="数据库服务器地址，一般为localhost" datatype="*" value="101.200.36.159">
+                                                    <input type="text" name="step2[host]" class="form-control" placeholder="数据库服务器地址，一般为localhost" datatype="*" value="">
                                                 </div>
                                             </div>
 
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">数据库端口号</label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" name="step2[port]" class="form-control" datatype="n" value="3307">
+                                                    <input type="text" name="step2[port]" class="form-control" datatype="n" value="3306">
                                                 </div>
                                             </div>
 
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">数据库用户名</label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" name="step2[user]" class="form-control" datatype="*" value="juzitest">
+                                                    <input type="text" name="step2[user]" class="form-control" datatype="*" value="">
                                                 </div>
                                             </div>
 
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">数据库密码</label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" name="step2[password]" class="form-control" datatype="*" value="tnFin7yyhFaFzA">
+                                                    <input type="text" name="step2[password]" class="form-control" datatype="*" value="">
                                                 </div>
                                             </div>
 
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">数据库名</label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" name="step2[name]" class="form-control" datatype="*" value="phprap">
+                                                    <input type="text" name="step2[name]" class="form-control" datatype="*" value="">
                                                 </div>
                                             </div>
 
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">数据库表前缀</label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" name="step2[prefix]" class="form-control" datatype="*" placeholder="同一个数据库安装多个程序请修改" value="demo_">
+                                                    <input type="text" name="step2[prefix]" class="form-control" datatype="*" placeholder="同一个数据库安装多个程序请修改" value="doc_">
                                                 </div>
                                             </div>
 
