--- a/application/home/view/field/response/add.html
+++ b/application/home/view/field/response/add.html
@@ -41,7 +41,7 @@
 
             <div class="form-group">
                 <label>MOCK规则
-                    <a target="_blank" href="http://mockjs.com/examples.html" data-toggle="tooltip" data-placement="right" title="" class="btn-show-tips" data-original-title="点击查看MOCK语法">
+                    <a target="_blank" href="https://github.com/gouguoyin/phprap/wiki/Mock" data-toggle="tooltip" data-placement="right" title="" class="btn-show-tips" data-original-title="点击查看MOCK语法">
                         <i class="fa fa-info-circle"></i>
                     </a>
                 </label>
