--- a/application/install/view/step2.html
+++ b/application/install/view/step2.html
@@ -34,7 +34,7 @@
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">数据库服务器</label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" name="step2[host]" class="form-control" placeholder="数据库服务器地址，一般为localhost" datatype="*">
+                                                    <input type="text" name="step2[host]" class="form-control" placeholder="数据库服务器地址，一般为localhost" datatype="*" value="">
                                                 </div>
                                             </div>
 
@@ -48,21 +48,21 @@
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">数据库用户名</label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" name="step2[user]" class="form-control" datatype="*">
+                                                    <input type="text" name="step2[user]" class="form-control" datatype="*" value="">
                                                 </div>
                                             </div>
 
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">数据库密码</label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" name="step2[password]" class="form-control" datatype="*">
+                                                    <input type="text" name="step2[password]" class="form-control" datatype="*" value="">
                                                 </div>
                                             </div>
 
                                             <div class="form-group">
                                                 <label class="col-sm-2 control-label">数据库名</label>
                                                 <div class="col-sm-10">
-                                                    <input type="text" name="step2[name]" class="form-control" datatype="*">
+                                                    <input type="text" name="step2[name]" class="form-control" datatype="*" value="">
                                                 </div>
                                             </div>
 
