--- a/application/admin/view/index.html
+++ b/application/admin/view/index.html
@@ -3,12 +3,17 @@
     .huge {
         font-size: 35px;
     }
-    .osc_git_footer {
-        display: none;
-    }
+
     .last-item {
         margin: 0;
     }
+    .pro_name a{color: #4183c4;}
+    .osc_git_title{background-color: #fff;}
+    .osc_git_box{background-color: #fff;}
+    .osc_git_box{border-color: #E3E9ED;}
+    .osc_git_info{color: #666;}
+    .osc_git_main a{color: #9B9B9B;}
+    .osc_git_footer {display: none;}
 
 </style>
 </head>
@@ -176,15 +181,6 @@
                     <!-- /.panel-heading -->
                     <div class="panel-body">
                         <script src='//gitee.com/gouguoyin/phprap/widget_preview'></script>
-
-                        <style>
-                            .pro_name a{color: #4183c4;}
-                            .osc_git_title{background-color: #fff;}
-                            .osc_git_box{background-color: #fff;}
-                            .osc_git_box{border-color: #E3E9ED;}
-                            .osc_git_info{color: #666;}
-                            .osc_git_main a{color: #9B9B9B;}
-                        </style>
                     </div>
                     <!-- /.panel-body -->
                 </div>
