使用说明新增mock规则

--- a/application/admin/view/index.html
+++ b/application/admin/view/index.html
@@ -5,7 +5,7 @@
     }
 
     .last-item {
-        margin: 0 0 30px;
+        margin: 0;
     }
     .pro_name a{color: #4183c4;}
     .osc_git_title{background-color: #fff;}
