使用说明新增mock规则

--- a/application/admin/view/index.html
+++ b/application/admin/view/index.html
@@ -1,4 +1,4 @@
-{{include_file name='public/header' title='1管理中心'}}
+{{include_file name='public/header' title='管理中心'}}
 <style>
     .huge {
         font-size: 35px;
