--- a/application/admin/view/index.html
+++ b/application/admin/view/index.html
@@ -9,12 +9,14 @@
         margin: 0;
     }
     .pro_name a{color: #4183c4;}
+    .ui.segment.osc_git_box {height: 260px;padding: 0px !important;border: 1px solid #E3E9ED;}
     .osc_git_title{background-color: #fff;}
     .osc_git_box{background-color: #fff;}
     .osc_git_box{border-color: #E3E9ED;}
     .osc_git_info{color: #666;}
     .osc_git_main a{color: #9B9B9B;}
     .osc_git_footer {display: none;}
+
 
 </style>
 </head>
