--- a/application/admin/view/setting/index.html
+++ b/application/admin/view/setting/index.html
@@ -40,11 +40,6 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label>版权信息</label>
-                                        <textarea class="form-control" name="config[copyright]" rows="1" ignore="ignore" datatype="*" nullmsg="请输入版权信息！">{{$config['copyright']}}</textarea>
-                                    </div>
-
-                                    <div class="form-group">
                                         <label>统计代码</label>
                                         <textarea class="form-control" name="config[tongji_js]" rows="4" datatype="*" ignore="ignore" placeholder="不包含<script></script>">{{$config['tongji_js']}}</textarea>
                                     </div>
@@ -58,6 +53,23 @@
                                         <label>重置默认密码</label>
                                         <input class="form-control" name="config[default_password]" value="{{$config['default_password']}}" placeholder="必填，6-20个英文字母、数字或下划线组成的字符" value="123456" datatype="*6-20" nullmsg="请输入重置默认密码！" errormsg="至少6位">
 
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="recipient-name" class="control-label">是否推送消息:</label>
+                                        <div class="form-group">
+                                            <label class="radio-inline">
+                                                <input type="radio" name="config[is_push]" {{if $config['is_close'] == 0}}checked{{/if}} value=0> 否
+                                            </label>
+                                            <label class="radio-inline">
+                                                <input type="radio" name="config[is_push]" {{if $config['is_close'] == 1}}checked{{/if}} value=1 > 是
+                                            </label>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group js_pushTime hidden">
+                                        <label>推送间隔(单位秒)</label>
+                                        <input class="form-control" name="config[push_time]" value="{{$config['push_time']|default:3}}" placeholder="单位秒" value="3" datatype="n">
                                     </div>
 
                                     <div class="form-group">
@@ -102,6 +114,30 @@
     <p class="text-center">{{get_config('copyright')}}</p>
     <!-- /#wrapper -->
     <script>
+
+        //展示推送间隔信息
+        var pushTimeShow = function(){
+            var isPush = $("input[name='config[is_push]']:checked").val();
+
+            if(isPush == 1){
+
+                $(".js_pushTime").removeClass("hidden");
+                $(".js_pushTime input").attr("ignore",'');
+
+            }else{
+
+                $(".js_pushTime").addClass("hidden");
+                $(".js_pushTime input").attr("ignore",'ignore');
+
+            }
+        }
+
+        pushTimeShow();
+
+        // 选择不时时推送时
+        $("input[name='config[is_push]']").click(function(){
+            pushTimeShow();
+        });
 
         //展示关闭提示信息
         var closeMsgShow = function(){
