修复接口详情页刷新mock数据时多次请求的BUG，并增加刷新频率限制

--- a/application/home/view/public/footer.html
+++ b/application/home/view/public/footer.html
@@ -157,7 +157,7 @@
 
         setInterval(function(){
 
-            //$('.js_notifyDropdown').load(loadUrl);
+            $('.js_notifyDropdown').load(loadUrl);
 
         }, pushTime*1000);
         {{/if}}
