更新框架版本号

--- a/application/admin/view/index.html
+++ b/application/admin/view/index.html
@@ -159,7 +159,7 @@
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
-                        <p>程序版本：V{{$system.gophp_version}}</p>
+                        <p>程序版本：V{{$system.gophp_version}} <a target="_blank" href="https://github.com/gouguoyin/phprap/releases">最新版本</a></p>
                         <p>系统环境：{{PHP_OS}}+PHP{{$system.php_version}}+MySQL{{$system.mysql_version}}</p>
                         <p>使用技术：PHP+MySQL+Bootstrap+JQuery</p>
                         <p>最大执行时间：{{get_cfg_var("max_execution_time")}}秒</p>
