修复添加项目环境域名时，描述有汉字时展示乱码的BUG

--- a/application/home/view/api/detail.html
+++ b/application/home/view/api/detail.html
@@ -26,7 +26,8 @@
                         <a href="javascript:void(0);" class="btn btn-sm btn-danger js_deleteApiBtn" data-id="{{$api.id}}"><i class="fa fa-fw fa-times"></i>删除</a>
                         {{/if}}
 
-<!--                        <a target="_blank" href="{{url("debug/{{id_encode($api.id)}}")}}" class="btn btn-sm btn-warning js_debugApiBtn"><i class="fa fa-fw fa-wrench"></i>调试</a>-->
+
+                        <a target="_blank" href="{{url("debug/{{id_encode($api.id)}}")}}" class="btn btn-sm btn-warning js_debugApiBtn"><i class="fa fa-fw fa-wrench"></i>调试</a>
 
                     </div>
                 </div>
