--- a/application/home/view/project/add.html
+++ b/application/home/view/project/add.html
@@ -137,7 +137,7 @@
             event.stopPropagation();
 
             if($('.js_deleteEnvBtn').length <= 1){
-                alert('至少要保留一个环境域名');
+                alert('至少要保留一个环境域名', 1000);
                 return false;
             }
 
