--- a/application/home/view/debug/index.html
+++ b/application/home/view/debug/index.html
@@ -1,94 +1,118 @@
-{{include_file name='public/header' title='在线调试'}}
-
-</head>
-
+<html>
+<head></head>
 <body>
+{{include_file name='public/header' title='在线调试'}}
+<style>
+    body {
+        background-color: #ffffff;
+    }
 
+    .table {
+        width: 100%;
+        max-width: 100%;
+        margin-bottom: 0;
+    }
+
+    table a{
+        margin-top: 10px;
+    }
+
+    .panel-body {
+        padding: 15px 0 15px 15px;
+    }
+
+    .table>tbody>tr>td {
+        padding: 8px 8px 8px 0;
+        line-height: 1.42857143;
+        vertical-align: top;
+        border-top: 0;
+    }
+
+    .nav-pills{
+        margin-bottom: 10px;
+    }
+
+    .nav-pills>li>a {
+
+        padding: 5px 10px;
+        font-size: 12px;
+        line-height: 1.5;
+        border-radius: 3px;
+
+        position: relative;
+        display: block;
+    }
+
+    .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+        color: #fff;
+        background-color: #5cb85c;
+    }
+
+    .nav-pills>li>a:visited{
+        text-decoration: none;
+        background-color: #eee;
+    }
+
+</style>
 <div id="wrapper">
-
-    <!-- Navigation -->
-    {{include_file name='public/nav' sidebar='debug_sidebar'}}
+    <!-- Navigation --> {{include_file name='public/nav' sidebar='debug_sidebar'}}
     <div id="page-wrapper">
-
-
         <div class="row">
             <div class="col-lg-12">
                 <div class="page-header">
                     <h1>接口调试 </h1>
-
                 </div>
             </div>
-
             <!-- /.col-lg-12 -->
         </div>
         <!-- /.row -->
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-7">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="input-group">
-
-                        <div class="input-group-btn">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MOCK <span class="caret"></span></button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">develop</a></li>
-                                <li><a href="#">product</a></li>
-                            </ul>
-                        </div>
-
-                        <input type="text" class="form-control" aria-label="Text input with dropdown button" placeholder="请输入请求地址">
-
-                        <div class="input-group-btn">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">GET <span class="caret"></span></button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">POST</a></li>
-                                <li><a href="#">PUT</a></li>
-                            </ul>
-                            <button class="btn btn-success" type="button"><i class="fa fa-search"></i> 请求</button>
-                        </div>
-
-                    </div>
-
                         <div class="form-group">
-                            <label></label>
-                            <input class="form-control">
+                            <div class="input-group">
+                                <div class="input-group-btn">
+                                    <button style="width: 80px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="js_envName">{{$envs.0.name}}</span> <span class="caret"></span></button>
+                                    <ul class="dropdown-menu">
+                                        {{foreach $envs as $env}}
+                                        <li><a class="js_envItem" href="javascript:void(0);" data-url="{{$env.url}}">{{$env.name}}</a></li>
+                                        {{/foreach}}
+
+                                    </ul>
+                                </div>
+                                <input type="text" class="form-control js_envUrl" aria-label="Text input with dropdown button" placeholder="请输入请求地址" value="{{$envs.0.url}}" />
+                                <div class="input-group-btn">
+                                    <button style="width: 80px;" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="js_methodName">{{$api.method}}</span> <span class="caret"></span></button>
+                                    <ul class="dropdown-menu">
+                                        {{foreach $methods as $method}}
+                                        <li class="js_methodItem"><a href="javascript:void(0);">{{$method}}</a></li>
+                                        {{/foreach}}
+                                    </ul>
+                                    <button class="btn btn-success" type="button"><i class="fa fa-search"></i> 请求</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                请求参数
+                                Header参数 <a href="javascript:void(0);" class="fa fa-plus js_addBtn" data-toggle="tooltip" data-placement="right" title="添加参数"></a>
                             </div>
                             <!-- /.panel-heading -->
                             <div class="panel-body">
                                 <div class="table-responsive">
-                                    <div class="table-responsive table-bordered">
+                                    <div class="table-responsive">
                                         <table class="table">
                                             <tbody>
                                             <tr>
-                                                <td style="width:20%"><input name="env[name][]" class="form-control" placeholder="必填，标识符" datatype="/[a-z|A-Z|0-9|\-|_|\.]$/" value="product"></td>
-                                                <td style="width:20%"><input name="env[title][]" class="form-control" placeholder="必填，备注" datatype="*" value="u751fu4ea7u73afu5883"></td>
-                                                <td style="width:50%"><input name="env[domain][]" class="form-control" placeholder="必填，环境域名，包含协议" datatype="/^(http|https)\:\/\//" value="http://demo.gouguoyin.cn"></td>
-                                                <td style="width:10%">
-                                                    <a href="javascript:void(0);" class="fa fa-plus js_addEnvBtn" data-title="添加环境" data-project_id="3"></a>
-                                                    <a href="javascript:void(0);" class="fa fa-trash-o js_deleteEnvBtn" data-title="删除环境" data-project_id="3"></a>
-                                                </td>
+                                                <td style="width:20%"> <input name="env[title][]" class="form-control js_selectMemberBtn" placeholder="key" datatype="*" value="" /> </td>
+                                                <td style="width:75%"> <input name="env[title][]" class="form-control" placeholder="value" datatype="*" value="" /> </td>
+                                                <td style="width:5%">
+                                                    <a href="javascript:void(0);" class="fa fa-trash-o js_deleteBtn" data-title="删除header参数" data-project_id="3"></a> </td>
                                             </tr>
-                                            <tr>
-                                                <td style="width:20%"><input name="env[name][]" class="form-control" placeholder="必填，标识符" datatype="/[a-z|A-Z|0-9|\-|_|\.]$/" value="develop"></td>
-                                                <td style="width:20%"><input name="env[title][]" class="form-control" placeholder="必填，备注" datatype="*" value="u5f00u53d1u73afu5883"></td>
-                                                <td style="width:50%"><input name="env[domain][]" class="form-control" placeholder="必填，环境域名，包含协议" datatype="/^(http|https)\:\/\//" value="http://demo.gouguoyin.cn"></td>
-                                                <td style="width:10%">
-                                                    <a href="javascript:void(0);" class="fa fa-plus js_addEnvBtn" data-title="添加环境" data-project_id="3"></a>
-                                                    <a href="javascript:void(0);" class="fa fa-trash-o js_deleteEnvBtn" data-title="删除环境" data-project_id="3"></a>
-                                                </td>
-                                            </tr>
-
-
-
                                             </tbody>
                                         </table>
                                     </div>
@@ -101,27 +125,189 @@
                     </div>
                     <!-- /.col-lg-6 -->
                 </div>
-
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                请求参数
+                                <a href="javascript:void(0);" class="fa fa-plus js_addBtn" data-toggle="tooltip" data-placement="right" title="添加参数"></a>
+                            </div>
+                            <!-- /.panel-heading -->
+                            <div class="panel-body">
+                                <div class="table-responsive">
+                                    <div class="table-responsive">
+                                        <table class="table">
+                                            <tbody>
+                                            {{foreach $request_fields as $request_field}}
+                                            <tr>
+                                                <td style="width:20%"><input name="env[name][]" class="form-control" placeholder="key" datatype="*" value="{{$request_field.name}}"/></td>
+                                                <td style="width:75%"><input name="env[title][]" class="form-control" placeholder="value" datatype="*" value="{{$request_field.default_value}}"/></td>
+                                                <td style="width:5%">
+                                                    <a href="javascript:void(0);" class="fa fa-trash-o js_deleteBtn" data-project_id="3"></a>
+                                                </td>
+                                            </tr>
+                                            {{/foreach}}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <!-- /.table-responsive -->
+                            </div>
+                            <!-- /.panel-body -->
+                        </div>
+                        <!-- /.panel -->
+                    </div>
+                    <!-- /.col-lg-6 -->
+                </div>
             </div>
+            <div class="col-lg-5" >
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                响应结果 <a href="javascript:void(0);">status:200</a>    <a href="javascript:void(0);">time:2335 ms</a>
+                            </div>
+                            <!-- /.panel-heading -->
+                            <div class="panel-body">
+                                <!-- Nav tabs -->
+                                <ul class="nav nav-pills">
+                                    <li class="active"><a href="#header-pills" data-toggle="tab" aria-expanded="true">Headers</a>
+                                    </li>
+                                    <li class=""><a href="#body-pills" data-toggle="tab" aria-expanded="false">Body</a>
+                                    </li>
+                                    <li class=""><a href="#cookie-pills" data-toggle="tab" aria-expanded="false">Cookies</a>
+                                    </li>
 
+                                </ul>
 
-            <div class="col-lg-4">
-                <input type="text" class="form-control" aria-label="Text input with dropdown button">
+                                <!-- Tab panes -->
+                                <div class="tab-content">
+                                    <div class="tab-pane fade active in" id="header-pills">
+                                        <p>
+                                            cache-control →no-store, no-cache, must-revalidate
+                                        </p>
+                                        <p>
+                                            connection →keep-alive
+                                        </p>
+                                        <p>
+                                            content-encoding →gzip
+                                        </p>
+                                        <p>
+                                            content-type →text/html; charset=UTF-8
+                                        </p>
+                                        <p>
+                                            date →Fri, 10 Nov 2017 07:10:38 GMT
+                                        </p>
+                                        <p>
+                                            expires →Thu, 19 Nov 1981 08:52:00 GMT
+                                        </p>
+                                        <p>
+                                            pragma →no-cache
+                                        </p>
+                                        <p>
+                                            server →nginx
+                                        </p>
+                                        <p>
+                                            transfer-encoding →chunked
+                                        </p>
+                                        <p>
+                                            vary →Accept-Encoding
+                                        </p>
+                                        <p>
+                                            x-powered-by →PHP/7.0.13
+                                        </p>
+
+                                    </div>
+                                    <div class="tab-pane fade" id="body-pills">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    </div>
+                                    <div class="tab-pane fade" id="cookie-pills">
+                                        <p>
+                                            暂无数据
+                                        </p>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <!-- /.panel-body -->
+                        </div>
+                        <!-- /.panel -->
+                    </div>
+                </div>
             </div>
-
-
-            </div>
-
-
         </div>
-        <!-- /.row -->
-
     </div>
-    <!-- /#page-wrapper -->
-    <hr>
-    <p class="text-center">{{get_config('copyright')}}</p>
-
+    <!-- /.row -->
 </div>
+<!-- /#page-wrapper -->
+<div class="hidden js_cloneBox">
+    <tr>
+        <td style="width:20%"><input name="env[name][]" class="form-control" placeholder="key" datatype="*" value="{{$request_field.name}}"/></td>
+        <td style="width:75%"><input name="env[title][]" class="form-control" placeholder="value" datatype="*" value="{{$request_field.default_value}}"/></td>
+        <td style="width:5%">
+            <a href="javascript:void(0);" class="fa fa-trash-o js_deleteBtn" data-project_id="3"></a>
+        </td>
+    </tr>
+</div>
+
+<hr />
+<p class="text-center">{{get_config('copyright')}}</p>
 <!-- /#wrapper -->
+<script src="{{STATIC_URL}}/plugins/bootstrap/js/bootstrap3-typeahead.min.js"></script>
+<script>
+    $(function () {
+
+        // 选择环境
+        $(".js_envItem").click(function () {
+            var name = $(this).text();
+            var url = $(this).data('url');
+
+            $(".js_envName").text(name);
+            $(".js_envUrl").val(url);
+
+        });
+
+        // 选择请求方式
+        $(".js_methodItem").click(function () {
+            var name = $(this).text();
+
+            $(".js_methodName").text(name);
+
+        });
+
+        // 新增参数
+        $("body").on('click', '.js_addBtn',function () {
+            var trObj = $(".js_cloneBox").find('tr');
+            console.log(trObj);
+            $(this).closest('tbody').append(trObj.clone(true));
+        });
+
+        // 删除参数
+        $("body").on('click', '.js_deleteBtn',function () {
+            // 阻止事件冒泡
+            event.stopPropagation();
+
+            if($('.js_deleteBtn').length < 1){
+                alert('至少要保留一个参数', 1000);
+                return false;
+            }
+
+            $(this).closest('tr').remove();
+        });
+
+        //选择header
+        var selectMemberBtn = $('.js_selectMemberBtn');
+        var localArrayData = ['Accept', 'Accept-Charset', 'Accept-Encoding', 'Accept-Language', 'Accept-Ranges', 'Authorization', 'Cache-Control', 'Connection','Cookie','Content-Length','Content-Type','Referer','User-Agent'];
+
+        selectMemberBtn.typeahead({
+            source: localArrayData,
+            items: 8, //显示8条
+            delay: 100, //延迟时间
+
+        });
+    });
+</script>
 
 {{include_file name='public/footer'}}
+</body>
+</html>
