--- a/application/home/view/project/select.html
+++ b/application/home/view/project/select.html
@@ -37,6 +37,9 @@
         padding: 0 30px;
         border-left: 1px solid #e7e7e7;
     }
+    .drag-sort{
+        cursor: move;
+    }
 
 </style>
 
@@ -59,14 +62,16 @@
             <!-- /.col-lg-12 -->
         </div>
         <!-- /.row -->
-        <div class="row">
+        <div class="row" id="sortable">
             {{foreach $create_projects as $create_project}}
             {{$project_id = $create_project.id}}
             {{$user_id = $create_project.user_id}}
             <div class="col-lg-3 view-project js_viewProject pannel-project" data-url="{{url("project/{{id_encode($create_project.id)}}")}}">
-            <div class="panel panel-default">
+                <div class="panel panel-default">
                 <div class="panel-heading">
-                    <span class="head-title">{{$create_project.title|truncate:14}}</span>
+                    <span class="head-title">
+                        <a href="javascript:void(0);" class="drag-sort fa hidden-xs fa-navicon js_dragProjectBtn" title='拖拽排序' data-id="{{$create_project.id}}"></a>
+  {{$create_project.title|truncate:12}}</span>
                     <span class="head-btn">
                                 {{if \app\member::has_rule({{$create_project.id}}, 'project', 'update')}}
                                 <a class="fa hidden-xs fa-pencil js_addProjectBtn" data-title='编辑项目' data-id="{{$create_project.id}}"></a>
@@ -90,7 +95,7 @@
                     最近更新时间({{$create_project.update_time}})
                 </div>
             </div>
-        </div>
+            </div>
         {{/foreach}}
 
         <!-- /.col-lg-4 -->
@@ -255,9 +260,21 @@
 
 </div>
 <!-- /#wrapper -->
+<script type="text/javascript" src="{{STATIC_URL}}/plugins/sortable/sortable.min.js"></script>
 
 <script>
     $(function(){
+
+        // 拖拽排序
+        var el = document.getElementById('sortable');
+        var sortable = Sortable.create(el,{
+            animation: 150,
+            forceFallback: true,
+            handle: ".js_dragProjectBtn",
+            draggable: ".js_viewProject",
+            scrollSensitivity: 100,
+            scrollSpeed: 20
+        });
 
         // 添加/编辑项目
         $(".js_addProjectBtn").iframeModal({
@@ -281,8 +298,9 @@
         });
 
         //查看项目
-        $(".js_viewProject").click(function () {
+        $(".js_viewProject").click(function (event) {
 
+            event.stopPropagation();
             window.location.href = $(this).data('url');
 
         });
