--- a/application/home/view/api/add.html
+++ b/application/home/view/api/add.html
@@ -32,7 +32,7 @@
                 <div class="form-group">
                     {{foreach \app\api::get_method_list() as $k => $method}}
                     <label class="radio-inline">
-                        <input type="radio" name="api[method]" value="{{$k}}" {{if $k == 2}}checked{{/if}}> {{$method}}
+                        <input type="radio" name="api[method]" value="{{$method}}" {{if $method == 'POST'}}checked{{/if}}> {{$method}}
                     </label>
                     {{/foreach}}
 
