--- a/application/home/view/project/history.html
+++ b/application/home/view/project/history.html
@@ -50,7 +50,7 @@
                                 <tbody>
                                 {{foreach $historys as $history}}
                                 <tr>
-                                    <td>{{$history.user_name}}</td>
+                                    <td>{{$history.user_name}}<br>{{$history.user_email}}</td>
                                     <td>{{$history.type}}</td>
                                     <td>{{$history.object}}</td>
                                     <td>{{$history.content}}</td>
