--- a/application/home/view/api/detail.html
+++ b/application/home/view/api/detail.html
@@ -103,6 +103,44 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
+                        Header参数
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-bordered table-hover">
+                                <thead>
+                                <tr class="success">
+                                    <th>字段键</th>
+                                    <th>字段值</th>
+                                    <th>备注说明</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {{foreach $header_fields as $header_field}}
+                                <tr class="{{$header_field.class}}">
+                                    <td>{{$header_field.name}}</td>
+                                    <td>{{$header_field.default_value}}</td>
+                                    <td>{{$header_field.intro}}</td>
+                                </tr>
+                                {{/foreach}}
+
+                                </tbody>
+                            </table>
+                        </div>
+                        <!-- /.table-responsive -->
+                    </div>
+                    <!-- /.panel-body -->
+                </div>
+                <!-- /.panel -->
+            </div>
+            <!-- /.col-lg-6 -->
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
                         请求参数
                     </div>
                     <!-- /.panel-heading -->
@@ -231,7 +269,7 @@
         //删除接口表单合法性验证
         $("#js_deleteApiForm").validateForm({
             success:function () {
-                window.location.href = "{{url("project/{{$project.id}}")}}";
+                window.location.href = "{{url("project/{{$project.encode_id}}")}}";
                 //parent.location.reload();
             },
         });
