--- a/application/home/view/debug/load.html
+++ b/application/home/view/debug/load.html
@@ -2,27 +2,46 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                响应
+
                 {{if $info}}
                 <a href="javascript:void(0);">status:{{$info.http_code}}</a>    <a href="javascript:void(0);">time:{{$info.total_time}} s</a>
+                {{else}}
+                响应面板
                 {{/if}}
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
                 <!-- Nav tabs -->
                 <ul class="nav nav-pills">
-                    <li class="active"><a href="#header-pills" data-toggle="tab" aria-expanded="true">Headers</a>
+
+                    <li class="active"><a href="#body-pills" data-toggle="tab" aria-expanded="false">Body</a>
                     </li>
-                    <li class=""><a href="#body-pills" data-toggle="tab" aria-expanded="false">Body</a>
+
+                    <li class=""><a href="#header-pills" data-toggle="tab" aria-expanded="true">Headers</a>
                     </li>
+
                     <li class=""><a href="#cookie-pills" data-toggle="tab" aria-expanded="false">Cookies</a>
                     </li>
 
                 </ul>
 
                 <!-- Tab panes -->
+
                 <div class="tab-content">
-                    <div class="tab-pane fade active in" id="header-pills">
+
+                    <div class="tab-pane fade active in" id="body-pills">
+                        <p>
+                            {{if $body}}
+                        <div class="hidden json-data">{{$body}}</div>
+                        <div class="json-box">{{$body}}</div>
+                        {{else}}
+                        暂无数据
+                        {{/if}}
+                        </p>
+
+                    </div>
+
+                    <div class="tab-pane fade" id="header-pills">
                         {{if $headers.request}}
                         <h5>request</h5>
                         {{foreach $headers.request as $header}}
@@ -42,17 +61,7 @@
                         {{/if}}
 
                     </div>
-                    <div class="tab-pane fade" id="body-pills">
-                        <p>
-                        {{if $body}}
-                        <div class="hidden json-data">{{$body}}</div>
-                        <div class="json-box">{{$body}}</div>
-                        {{else}}
-                        暂无数据
-                        {{/if}}
-                        </p>
 
-                    </div>
                     <div class="tab-pane fade" id="cookie-pills">
                         <p>
                             暂无数据
