--- a/application/home/view/field/response/add.html
+++ b/application/home/view/field/response/add.html
@@ -84,12 +84,11 @@
                 var apiId = "{{$field.api_id}}";
                 $('#js_addApiForm', parent.document).find(".panel-response").load("{{url('field/load')}}", {'method':2,'api_id':apiId});
                 // 重新载入响应示例json
-                alert('lll', 500);
                 $('#js_addApiForm', parent.document).find(".panel-json").load("{{url('field/json')}}", {'api_id':apiId}, function () {
                     // 格式化json
                     window.parent.jsonFormat();
                     // 吐司提示
-                    $(window.parent.document).contents().find('[data-toggle="tooltip"]').tooltip();
+                    //$(window.parent.document).contents().find('[data-toggle="tooltip"]').tooltip();
                 });
                 // 关闭父级模态框
                 responseFieldModal.find(".js_close").trigger('click');
